--- a/04-Simpleregressions.Rmd
+++ b/04-Simpleregressions.Rmd
@@ -1,5 +1,9 @@
 # Simple regressions
 
+```{r, echo=FALSE}
+knitr::opts_chunk$set(echo = TRUE, class.source = "watch-out", options(scipen=999), out.width = "100%", comment = "", warning=FALSE, reticulate.repl.quiet = FALSE) 
+```
+
 *Class given by: Walter Garcia-Fontes* \ 
 
 *Literature used: [@JCurwin2013]*
