--- a/09-MarketingAnalytics.Rmd
+++ b/09-MarketingAnalytics.Rmd
@@ -6,8 +6,12 @@ editor_options:
 
 # Marketing Analytics
 
-*Class given by: Mohammad Ghaderi \ 
-Literature used: [@JHair2013]*
+```{r, echo=FALSE}
+knitr::opts_chunk$set(echo = TRUE, class.source = "watch-out", options(scipen=999), out.width = "100%", comment = "", warning=FALSE, reticulate.repl.quiet = FALSE) 
+```
+
+*Class given by: Mohammad Ghaderi* \ 
+*Literature used: [@JHair2013]*
 
 ## Logistic regressions
 
