--- a/03-Probability.Rmd
+++ b/03-Probability.Rmd
@@ -6,6 +6,10 @@ editor_options:
 
 # Applied Statistics
 
+```{r, echo=FALSE}
+knitr::opts_chunk$set(echo = TRUE, class.source = "watch-out", options(scipen=999), out.width = "100%", comment = "", warning=FALSE, reticulate.repl.quiet = FALSE) 
+```
+
 *Class given by: Walter Garcia-Fontes* \ 
 *Literature used: [@JCurwin2013]*
 
