--- a/05-SEM.Rmd
+++ b/05-SEM.Rmd
@@ -1,5 +1,9 @@
 # Structural equation models
 
+```{r, echo=FALSE}
+knitr::opts_chunk$set(echo = TRUE, class.source = "watch-out", options(scipen=999), out.width = "100%", comment = "", warning=FALSE, reticulate.repl.quiet = FALSE) 
+```
+
 *Class given by: Albert Satorra* \ 
 *Literature used: [@kdnuggets2017]*
 
