--- a/06-Python.Rmd
+++ b/06-Python.Rmd
@@ -14,9 +14,11 @@ use_python("/usr/local/bin/python")
 ```
 
 ```{r, echo=FALSE}
+knitr::opts_chunk$set(echo = TRUE, class.source = "watch-out", options(scipen=999), out.width = "100%", comment = "", warning=FALSE, reticulate.repl.quiet = FALSE) 
+```
+
+```{r, echo=FALSE}
 knitr::opts_chunk$set(
-  echo = TRUE, 
-  warning = FALSE, 
   cache.lazy = FALSE, 
   message=FALSE
 )
