--- a/07-PracticalDataScience.Rmd
+++ b/07-PracticalDataScience.Rmd
@@ -6,6 +6,10 @@ editor_options:
 
 # Practical Data Science
 
+```{r, echo=FALSE}
+knitr::opts_chunk$set(echo = TRUE, class.source = "watch-out", options(scipen=999), out.width = "100%", comment = "", warning=FALSE, reticulate.repl.quiet = FALSE) 
+```
+
 *Class given by: Alberto Santini* \ 
 
 *Literature used: [@GJames2013], [@THastie2017]*
